@@ -37,6 +37,7 @@ FIXES
 * Fixed some miscellaneous ./configure issues on Solaris (Bryan Heden, Troy Lea)
 * Fixed "Locate host on map" link (#496) (Troy Lea)
 * Fixed duplicate nodes in map (#471) (Bryan Heden)
+* Fixed service groups defined with unknown service members (that aren't first in the list) not erroring out (#500) (Bryan Heden)
 
 
 4.3.4 - 2017-08-24
